--- a/src/components/KeyBoard/index.module.css
+++ b/src/components/KeyBoard/index.module.css
@@ -1,4 +1,6 @@
 #keyboard {
   display: flex;
   justify-content: center;
+  height:8rem;
+  position: relative;
 }
